fixed input flickering

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ a {
      font-size: 14px;
 }
 
+input {
+    -webkit-backface-visibility: hidden;
+}
+
 input[type='number'] {
     width: 40px;
 }
